--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Arav Sharma"
   avatar           : "/images/lsd.jpg"
-  bio              : "Associate Threat Researcher"
+  bio              : "Threat Researcher"
   location         : "United States"
   twitter          : "lsd"
   email            :
