--- a/_config.yml
+++ b/_config.yml
@@ -12,15 +12,15 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise", "neon"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Home"
+title                    : "Narayani Foundation Gallery"
 title_separator          : "|"
-name                     : "Home"
+name                     : "Narayani Foundation Gallery"
 description              : ""
-url                      : threatupdates.github.io
+url                      : hajm0la.github.io
 baseurl                  : "/media"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
