--- a/_config.yml
+++ b/_config.yml
@@ -122,7 +122,7 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/threatupdates"
+      url: "https://github.com/ourngo"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter"
       url: "https://twitter.com/"
