--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 # Site Author
 author:
   name             : "Narayani Foundation"
-  avatar           : "/images/lsd.jpg"
+  avatar           : "/images/ddd.png"
   bio              : "Our NGO"
   location         : "United States"
   twitter          : "lsd"
